tests/ui/include_value_wrong_size.msrv.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/include_value_wrong_size.rs:12:25
   |
12 | const WRONG_SIZE: u64 = zerocopy::include_value!("../../testdata/include_value/data");
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[u8; 4]` (32 bits)
   = note: target type: `u64` (64 bits)
   = note: this error originates in the macro `$crate::transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0512`.
